--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         vr-mode-ui='enabled: false' 
         embedded
         arjs='sourceType: webcam; sourceWidth:1280; sourceHeight:960; displayWidth: 1280; displayHeight: 960; debugUIEnabled: false;'>
-        <div id="demo" style="position: fixed; left: 40%; top: 5%; font-size: 1.25em; color: rgb(53, 50, 50); font-family: fantasy; z-index: 999999; background-color: rgba(255, 255, 255, 0.3); border-radius:5px;"></div>
+        <div id="demo" style="position: fixed; right: 1%; top: 1%; font-size: 1.05em; color: rgb(17, 16, 16); font-family: 'Courier New'; font-weight: bold; z-index: 999999;"></div>
 
      	  <!--1. Wegpunkt-->
       <a-entity geometry="primitive: sphere; radius: 2"
